/*
    SonarQube, open source software quality management tool.
    Copyright (C) 2008-2015 SonarSource
    mailto:contact AT sonarsource DOT com

    SonarQube is free software; you can redistribute it and/or
    modify it under the terms of the GNU Lesser General Public
    License as published by the Free Software Foundation; either
    version 3 of the License, or (at your option) any later version.

    SonarQube is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
    Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public License
    along with this program; if not, write to the Free Software Foundation,
    Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
*/

option java_package = "org.sonar.batch.protocol";

option optimize_for = SPEED;

enum Severity {
  INFO = 0;
  MINOR = 1;
  MAJOR = 2;
  CRITICAL = 3;
  BLOCKER = 4;
}

enum ComponentType {
  PROJECT = 0;
  MODULE = 1;
  DIRECTORY = 2;
  FILE = 3;
  VIEW = 4;
  SUBVIEW = 5;
}

enum MeasureValueType {
  INT = 0;
  LONG = 1;
  DOUBLE = 2;
  BOOLEAN = 3;
  STRING = 4;
}

// temporary enum during development of computation stack
enum EventCategory {
  ALERT = 0;
  PROFILE = 1;
}

enum ComponentLinkType {
  HOME = 0;
  SCM = 1;
  SCM_DEV = 2;
  ISSUE = 3;
  CI = 4;
}

enum HighlightingType {
  ANNOTATION = 0;
  CONSTANT = 1;
  COMMENT = 2;
  CPP_DOC = 3;
  STRUCTURED_COMMENT = 4;
  KEYWORD = 5;
  HIGHLIGHTING_STRING = 6;
  KEYWORD_LIGHT = 7;
  PREPROCESS_DIRECTIVE = 8;
}

enum TestStatus {
  OK = 1;
  FAILURE = 2;
  ERROR = 3;
  SKIPPED = 4;
}
